[package]
name = "rdedup-cdc"
version = "0.1.0"
authors = ["Aidan Hobson Sayers <aidanhs@cantab.net>", "Dawid Ciężarkiewicz <dpc@dpc.pw>"]
repository = "https://github.com/aidanhs/rsroll"
documentation = "http://aidanhs.github.io/rsroll/"
readme = "README.md"
description = "Content defined chunking (and rolling hash) algos"
license = "BSD-3-Clause"
edition = "2018"

[features]
default = ["gear", "bup"]
gear = []
bup = []
bench = []

[profile.bench]
opt-level = 3
debug = true
lto = true
debug-assertions = false

[dev-dependencies]
nanorand = "0.7"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false